# ETL

./: .coveragerc  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  test.py
connection/: connection.py
data/: sample.json
etl_app/: data.json  main.py  sentry_config.py
etl_app/connection/: DatabaseConnection.py  __init__.py  connection.py
etl_app/db_models/: facts_model.py
etl_app/services/: fact_service.py
etl_app/tools/: __init__.py  tools.py
etl_app_test/: test_files_go_here.txt  test_main.py
tools/: tools.py
