[project]
name = "etl_app"
version = "0.1.0"
description = ""
authors = [
    {name = "skip"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attrs (==25.3.0)",
    "certifi (==2025.4.26)",
    "cffi (==1.17.1)",
    "h11 (==0.16.0)",
    "idna (==3.10)",
    "outcome (==1.3.0.post0)",
    "psycopg2 (==2.9.10)",
    "pycparser (==2.22)",
    "pysocks (==1.7.1)",
    "selenium (==4.32.0)",
    "sniffio (==1.3.1)",
    "sortedcontainers (==2.4.0)",
    "trio (==0.30.0)",
    "trio-websocket (==0.12.2)",
    "typing-extensions (==4.13.2)",
    "urllib3 (==2.4.0)",
    "websocket-client (==1.8.0)",
    "wsproto (==1.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
